--- a/removal.css
+++ b/removal.css
@@ -4,7 +4,8 @@
 #newsHolder,
 #youNewDiv,
 #onetrust-consent-sdk,
-#wepKey,
+.weapKey,
+#aHolder,
 .imageButton,
 #editorBtnM,
 .headerBarRight .verticalSeparator,
