--- a/removal.css
+++ b/removal.css
@@ -13,7 +13,7 @@
 #instructions,
 .krSocial,
 #mailCount,
-#uiBase.onMenu #voiceDisplay,
+#voiceDisplay,
 #bubbleContainer,
 .endAHolder,
 #igXPBar,
