--- a/removal.css
+++ b/removal.css
@@ -20,3 +20,14 @@
 #tlInfHold{
     display: none!important;
 }
+
+/* Update 7/22 */
+
+.button,
+.button:hover{
+	border: hidden!important
+}
+
+.setSugBox{
+    display: none    
+}
